--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="ASSETS/css/style.css" />
   </head>
-  <body>
+  <body class="main-bg">
     <aside class="menu">
       <section class="main-content">
         <img
