--- a/index.html
+++ b/index.html
@@ -7,22 +7,25 @@
     <link rel="stylesheet" href="ASSETS/css/style.css" />
   </head>
   <body class="main-bg">
-    <aside class="menu">
-      <section class="main-content">
+    <section class="section">
+      <aside class="menu menu-content second-bg">
         <img
           class="icone"
           src="ASSETS/img/charizard-icon.png"
           alt="Dragao-gordo"
         />
-        <nav>
+        <nav class="">
           <ul>
-            <li><a href="#">Sobre</a></li>
-            <li><a href="#">Pokémons</a></li>
-            <li><a href="#">Universo</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href=""> Ola </a></li>
+            <li><a href="">Sobre</a></li>
+            <li><a href="">Pokemons</a></li>
+            <li><a href="">Universo</a></li>
+            <li><a href="">Contato</a></li>
           </ul>
         </nav>
-      </section>
-    </aside>
+      </aside>
+    </section>
+
+    <section class="section"></section>
   </body>
 </html>
