--- a/index.html
+++ b/index.html
@@ -7,25 +7,24 @@
     <link rel="stylesheet" href="ASSETS/css/style.css" />
   </head>
   <body class="main-bg">
-    <section class="section">
-      <aside class="menu menu-content second-bg">
+    <header class="main-content menu-content">
+      <nav class="menu">
         <img
           class="icone"
           src="ASSETS/img/charizard-icon.png"
           alt="Dragao-gordo"
         />
-        <nav class="">
-          <ul>
-            <li><a href=""> Ola </a></li>
-            <li><a href="">Sobre</a></li>
-            <li><a href="">Pokemons</a></li>
-            <li><a href="">Universo</a></li>
-            <li><a href="">Contato</a></li>
-          </ul>
-        </nav>
-      </aside>
-    </section>
+        <ul>
+          <li><a href=""> Olá </a></li>
+          <li><a href=""> Sobre </a></li>
+          <li><a href=""> Pokémons </a></li>
+          <li><a href=""> Universo </a></li>
+          <li><a href=""> Contato </a></li>
+        </ul>
+      </nav>
+    </header>
 
+    <section class="section"></section>
     <section class="section"></section>
   </body>
 </html>
